--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">   
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-
-
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
     <div class="container">
-      <span id="login-title">
-        SING UP
-      </span>
+      <span id="login-title"> SING UP </span>
       <div class="email">
         <span>Email</span>
-        <input type="text">
+        <input type="text" />
       </div>
       <div class="password">
         <span>Password</span>
-        <input type="password">
+        <input type="password" />
       </div>
       <div class="remenber-me">
-        <input type="checkbox">
+        <input type="checkbox" />
         <span>Remember me?</span>
       </div>
-      <input type="button" value="SING UP" id="login-button">
+      <input type="button" value="SING UP" id="login-button" />
       <div id="forgt-pass">
-        <a href="#" >Forgot Password?</a>
+        <a href="#">Forgot Password?</a>
       </div>
-      
       <div id="or-text">
         <span>OR</span>
       </div>
@@ -45,23 +43,22 @@
           <ion-icon name="logo-facebook"></ion-icon>
         </a>
         <a href="#" id="linkedin">
-        <ion-icon name="logo-linkedin"></ion-icon>
+          <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-      </div >
+      </div>
       <span id="already-user">
         Already a user? <a href="#" id="already-user-link">LOGIN</a>
       </span>
     </div>
-  
 
-
-
-
-
-
-
-  <script src="script.js"></script>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
+    <script src="script.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
