--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <span id="login-title"> SING UP </span>
+      <span id="login-title">SING UP</span>
       <div class="email">
         <span>Email</span>
         <input type="text" />
@@ -47,7 +47,8 @@
         </a>
       </div>
       <span id="already-user">
-        Already a user? <a href="#" id="already-user-link">LOGIN</a>
+        Already a user?
+        <a href="#" id="already-user-link">LOGIN</a>
       </span>
     </div>
 
