--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span>Password</span>
         <input type="password" />
       </div>
-      <div class="remenber-me">
+      <div class="remember-me">
         <input type="checkbox" />
         <span>Remember me?</span>
       </div>
